# TODDetector

./: CMakeLists.txt  README.md  main.cpp  sample.config.yaml  sample.config_old.yaml
include/fiducial/: fiducial.h
include/opencv_candidate/: Camera.h  PoseRT.h  circles_grid.hpp  circlesgrid.hpp
include/tod/core/: Features2d.h  Features3d.h  TexturedObject.h  TrainingBase.h  common.h
include/tod/detecting/: Cluster.h  Filter.h  GuessGenerator.h  GuessQualifier.h  HCluster.h  Loader.h  Matcher.h  Parameters.h  Recognizer.h  Tools.h  project3dPoints.h
include/tod/test/: GuessTest.h
include/tod/training/: base_creation.h  clouds.h  feature_extraction.h  file_io.h
src/fiducial/: fiducial.cpp
src/opencv_candidate/: Camera.cpp  PoseRT.cpp  circlesgrid.cpp
src/tod/core/: Features2d.cpp  Features3d.cpp  TexturedObject.cpp  TrainingBase.cpp
src/tod/detecting/: Cluster.cpp  Filter.cpp  GuessGenerator.cpp  GuessQualifier.cpp  HCluster.cpp  Loader.cpp  Matcher.cpp  Parameters.cpp  Recognizer.cpp  Tools.cpp  project3dPoints.cpp
src/tod/test/: GuessTest.cpp
src/tod/training/: base_creation.cpp  clouds.cpp  feature_extraction.cpp  file_io.cpp
